--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "axios": "^1.4.0",
     "expo": "~49.0.5",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
+    "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "react-native-image-picker": "^5.6.0",
+    "react-native-svg": "^13.10.0",
+    "react-native-svg-transformer": "^1.1.0",
+    "typescript": "^5.1.3",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.2.18",
+    "@types/react-native": "^0.72.2"
   },
   "private": true
 }
